fix meter overflow

--- a/client/blocks.css
+++ b/client/blocks.css
@@ -10,6 +10,7 @@
 }
 .Profile .Profile-meter {
   padding: 1rem 30px 0 0;
+  overflow: hidden;
 }
 
 .DoppleImage {
